// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PartOfSpeachItem /> should mark POS item as active 1`] = `
<div
  class="noun tab card active"
>
  <div
    class="label"
  >
    noun
  </div>
  <div
    class="count"
  >
     
  </div>
</div>
`;

exports[`<PartOfSpeachItem /> should mark POS item as enabled 1`] = `
<div
  class="noun tab card"
>
  <div
    class="label"
  >
    noun
  </div>
  <div
    class="count"
  >
     
  </div>
</div>
`;

exports[`<PartOfSpeachItem /> should mark POS item with frequency 1`] = `
<div
  class="noun tab card"
>
  <div
    class="label"
  >
    noun
  </div>
  <div
    class="count badge"
  >
    1
  </div>
</div>
`;

exports[`<PartOfSpeachItem /> should render disabled, inactive POS item 1`] = `
<div
  class="noun tab card empty"
>
  <div
    class="label"
  >
    noun
  </div>
  <div
    class="count"
  >
     
  </div>
</div>
`;

exports[`<PartOfSpeachSelector /> should mark POS with definition as available 1`] = `
<div>
  <PartOfSpeachItem
    active={false}
    enabled={true}
    freq={1}
    label="noun"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="verb"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="adj"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="adv"
  />
</div>
`;

exports[`<PartOfSpeachSelector /> should mark POS with excerpt as available 1`] = `
<div>
  <PartOfSpeachItem
    active={true}
    enabled={true}
    freq={1}
    label="noun"
  />
  <PartOfSpeachItem
    active={false}
    enabled={true}
    freq={1}
    label="verb"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="adj"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="adv"
  />
</div>
`;

exports[`<PartOfSpeachSelector /> should mark selected POS as 'active' 1`] = `
<div>
  <PartOfSpeachItem
    active={true}
    enabled={false}
    freq={0}
    label="noun"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="verb"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="adj"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="adv"
  />
</div>
`;

exports[`<PartOfSpeachSelector /> should render 1`] = `
<div>
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="noun"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="verb"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="adj"
  />
  <PartOfSpeachItem
    active={false}
    enabled={false}
    freq={0}
    label="adv"
  />
</div>
`;
